namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra
  labels:
    name: cassandra
