frontend-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-lb
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
